# bg-remove

./: LICENSE  README.md  pyproject.toml
bgrm/: __init__.py  bgrm.py
